Replace PublishArtifact task with 1ES inline publish task

--- a/nightly.yml
+++ b/nightly.yml
@@ -10,10 +10,10 @@
       inputs:
           BuildDropPath: '$(Build.ArtifactStagingDirectory)\$(NugetArtifactsDir)\sbom'
 
-    - task: PublishBuildArtifacts@1
+    - task: 1ES.PublishPipelineArtifact@1
       displayName: 'Publish SBOM'
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)\$(NugetArtifactsDir)\sbom'
+        path: '$(Build.ArtifactStagingDirectory)\$(NugetArtifactsDir)\sbom'
 
     - template: credscan.yml
  
@@ -175,11 +175,11 @@
          ]
         VerboseLogin: true
 
-    - task: PublishBuildArtifacts@1
+    - task: 1ES.PublishPipelineArtifact@1
       displayName: 'Publish Artifact - Nuget Packages'
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)\$(NugetArtifactsDir)'
-        ArtifactName: $(NugetArtifactsDir)
+        path: '$(Build.ArtifactStagingDirectory)\$(NugetArtifactsDir)'
+        artifact: $(NugetArtifactsDir)
 
     - task: NuGetCommand@2
       displayName: 'NuGet push - Nightly packages to MyGet'
