Remove duplicate OData.E2E.sln file in the root folder (#3430)
* Remove duplicate OData.E2E.sln file
* Update the E2E project output path to point to sln folder

--- a/test/EndToEndTests/Tests/Core/Microsoft.OData.Core.E2E.Tests/Microsoft.OData.Core.E2E.Tests.csproj
+++ b/test/EndToEndTests/Tests/Core/Microsoft.OData.Core.E2E.Tests/Microsoft.OData.Core.E2E.Tests.csproj
@@ -15,11 +15,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\..\..\bin\AnyCPU\Debug\Test\</OutputPath>
+    <OutputPath>..\..\..\..\..\sln\bin\AnyCPU\Debug\Test\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\..\..\bin\AnyCPU\Release\Test\</OutputPath>
+    <OutputPath>..\..\..\..\..\sln\bin\AnyCPU\Release\Test\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
 
